--- a/src/app/ledger/ledger.component.html
+++ b/src/app/ledger/ledger.component.html
@@ -1,9 +1,4 @@
-<table
-  class="main-table"
-  (contextmenu)="onContextMenu($event)"
-  (click)="onClick($event)"
-  (scroll)="onClick($event)"
->
+<table class="main-table">
   <thead class="main-table-head">
     <tr>
       <th class="checkbox">
@@ -52,7 +47,7 @@
       <th class="chevron"></th>
     </tr>
   </thead>
-  <tbody class="main-table-body">
+  <tbody (contextmenu)="onContextMenu($event)" class="main-table-body">
     <ng-container *ngFor="let entry of data; let i = index">
       <ng-container *ngFor="let doc of entry.docs; let j = index">
         <tr
@@ -169,57 +164,4 @@
     </ng-container>
   </tbody>
 </table>
-<div
-  class="context-menu"
-  [matMenuTriggerFor]="animals"
-  id="context-menu"
-  style="display: 'none'"
->
-  <mat-menu #animals="matMenu">
-    <button mat-menu-item [matMenuTriggerFor]="vertebrates">Vertebrates</button>
-    <button mat-menu-item [matMenuTriggerFor]="invertebrates">
-      Invertebrates
-    </button>
-  </mat-menu>
-
-  <mat-menu #vertebrates="matMenu">
-    <button mat-menu-item [matMenuTriggerFor]="fish">Fishes</button>
-    <button mat-menu-item [matMenuTriggerFor]="amphibians">Amphibians</button>
-    <button mat-menu-item [matMenuTriggerFor]="reptiles">Reptiles</button>
-    <button mat-menu-item>Birds</button>
-    <button mat-menu-item>Mammals</button>
-  </mat-menu>
-
-  <mat-menu #invertebrates="matMenu">
-    <button mat-menu-item>Insects</button>
-    <button mat-menu-item>Molluscs</button>
-    <button mat-menu-item>Crustaceans</button>
-    <button mat-menu-item>Corals</button>
-    <button mat-menu-item>Arachnids</button>
-    <button mat-menu-item>Velvet worms</button>
-    <button mat-menu-item>Horseshoe crabs</button>
-  </mat-menu>
-
-  <mat-menu #fish="matMenu">
-    <button mat-menu-item>Baikal oilfish</button>
-    <button mat-menu-item>Bala shark</button>
-    <button mat-menu-item>Ballan wrasse</button>
-    <button mat-menu-item>Bamboo shark</button>
-    <button mat-menu-item>Banded killifish</button>
-  </mat-menu>
-
-  <mat-menu #amphibians="matMenu">
-    <button mat-menu-item>Sonoran desert toad</button>
-    <button mat-menu-item>Western toad</button>
-    <button mat-menu-item>Arroyo toad</button>
-    <button mat-menu-item>Yosemite toad</button>
-  </mat-menu>
-
-  <mat-menu #reptiles="matMenu">
-    <button mat-menu-item>Banded Day Gecko</button>
-    <button mat-menu-item>Banded Gila Monster</button>
-    <button mat-menu-item>Black Tree Monitor</button>
-    <button mat-menu-item>Blue Spiny Lizard</button>
-    <button mat-menu-item disabled>Velociraptor</button>
-  </mat-menu>
-</div>
+<ledger-menu></ledger-menu>
